[package]
name = "joule-energy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified energy tracking, policy, and heterogeneous compute scheduling for JoulesPerBit productivity tools"

[dependencies]
joule-db-energy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
