[package]
name = "joule-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Energy-efficient web application framework in pure Rust — replaces React, Redux, React Router, and dozens of JS libraries with a single WASM-ready crate"

[dependencies]
joule-energy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
