[package]
name        = "jpb-core"
version     = "0.1.0"
description = "JoulesPerBit shared types — Energy, Score, TaskId, ArtifactId"
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true

[dependencies]
serde      = { workspace = true }
ciborium   = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
